https://github.com/khurramdeveloper55/restaurant

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        --------------------->
 
 
-      <!-- Navigation Starts -->
+      <!-- Nav Starts -->
 
       <header id="header" class="header-top">
         <div class="container">
