--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
     <link rel="stylesheet" href="css/style.css">
 
   </head>
-  <body onload="loadfunction();">
-
-<!-- Pre Loader  -->
-    <div id="loading"></div>
+  <body>
 
     <!---------------------
        Header Starts
